tests/error/minus-in-name.tst
123
#rooms
room-0 0 0
##end
end 1 1
##start
start 2 2
#links
start-end
start-room-0
room-0-end
